Fixed the bug where on-deck streams would be clipped on load. Also made a few design improvements: * The on-deck streams will now be resized depending on window width. The stream queue will now display as few as two streams (when window width is very low) and up to eight (if window width is very high, such as on 4K displays). The number of streams will change as the user changes window width, as usual. * Horizontal scroll bar for the stream queue is shorter.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -57,7 +57,9 @@ body {
 }
 
 body, html {
+    min-height: 100%;
     height: 100%;
+    max-height: 100%;
 
     &.noscroll {
         overflow-y: hidden;
@@ -97,6 +99,10 @@ select option {
     border: 0px;
     border-left: 2px solid $light-purple;
 
+    > select {
+        flex: 0 0 auto;
+    }
+
     > iframe {
         flex-basis: 100%;
         flex-grow: 1;
@@ -114,24 +120,28 @@ select option {
 }
 
 #main-stream {
-    flex-basis: auto;
-    flex-grow: 1;
-    flex-shrink: 0;
-
+    flex: 1 1 auto;
     border: 2px solid $light-purple;
 }
 
-#main-stream-player {
+#main-stream-container {
     flex-basis: 274px;
     flex-grow: 6;
     flex-shrink: 0;
 
+    display: flex;
+
     border: 0px;
 }
 
-
+#main-stream-player {
+    width: 100%;
+    flex: 0 0 auto;
+    border: 0px;
+}
 
 #stream-queue {
+    flex: 0 0 auto;
     border: 2px solid $light-purple;
     border-top: 0px;
     flex-wrap: nowrap;
@@ -140,16 +150,7 @@ select option {
 
     > iframe {
         border: 0px;
-        border-left: 1px solid $light-purple;
-        border-right: 1px solid $light-purple;
-
-        &:nth-child(1) {
-            border-left: 0px;
-        }
-
-        &:nth-last-child(1) {
-            border-right: 0px;
-        }
+        border-right: 2px solid $light-purple;
     }
 }
 
@@ -193,7 +194,6 @@ select option {
     color: $light-purple;
 }
 
-// Flexbox stuff
 .flex_row {
     display: flex;
     flex-direction: row;
@@ -209,9 +209,16 @@ select option {
     flex: 0 0 auto;
 }
 
+.pointer {
+    &:hover {
+        cursor: pointer;
+    }
+}
+
 ::-webkit-scrollbar {
     color: $purple;
     background-color: $purple;
+    height: 10px;
 }
 
 ::-webkit-scrollbar-track {
